@@ -1,3 +1,15 @@
+2018-06-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* rcsc/coach/coach_agent.cpp:
+	* rcsc/coach/coach_config.cpp:
+	* rcsc/coach/coach_config.h:
+	* rcsc/common/audio_codec.cpp:
+	* rcsc/common/audio_codec.h:
+	* rcsc/player/player_agent.cpp:
+	* rcsc/player/player_config.cpp:
+	* rcsc/player/player_config.h:
+	- AudioCodecに暗号化用シフトパラメータを追加
+
 2018-04-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* rcsc/common/abstract_client.cpp:
